<resources>
    <string name="app_name">WithTrip</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">피드</string>
    <string name="title_notifications">마이트립</string>
    <string name="title_mypage">마이페이지</string>

    <string name="mypage_profile">프로필</string>

    <string name="mypage_my_board">내가 쓴 트립</string>

    <string name="mypage_my_apply_board">참여 신청한 트립</string>

    <string name="mypage_login">로그인</string>
    <string name="mypage_logout">로그아웃</string>

    <string name="search_hint">주소, 태그, 제목 입력</string>
    <string name="splash_look_around"><u>둘러보기</u></string>
    <string name="splash_sign_in"><u>회원가입</u></string>


    <string name="popular">Popular</string>

    <string name="notifications">Notifications</string>
    <string name="google_maps_key">AIzaSyC2xg__0ndc9rfuYien53InjLbIJY5S9fw</string>

    <string name="title">제목</string>
    <string name="location">위치</string>
    <string name="person">인원</string>
    <string name="start_date">시작 일시</string>
    <string name="end_date">종료 일시</string>
    <string name="desc">내용</string>

    <string name="login_title">withTrip</string>
</resources>