<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gdg.withtrip.ui.map.MapFragment"
        android:label="@string/title_home">

        <action
            android:id="@+id/action_navigation_home_to_tripDetailFragment"
            app:destination="@id/tripDetailFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.gdg.withtrip.ui.feed.FeedFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_navigation_feed_to_tripDetailFragment2"
            app:destination="@id/tripDetailFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gdg.withtrip.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.gdg.withtrip.ui.mypage.MyPageFragment"
        android:label="MyPageFragment" >
        <action
            android:id="@+id/action_mypageFragment_to_likeFragment"
            app:destination="@id/likeFragment" />
        <action
            android:id="@+id/action_navigation_mypage_to_myFeedFragment"
            app:destination="@id/myFeedFragment" />

    </fragment>
    <fragment
        android:id="@+id/tripDetailFragment2"
        android:name="com.gdg.withtrip.ui.detail.TripDetailFragment"
        android:label="TripDetailFragment" >
        <argument
            android:name="tripDetail"
            app:argType="com.gdg.withtrip.ui.detail.TripDetail" />
    </fragment>

    <fragment
        android:id="@+id/myFeedFragment"
        android:name="com.gdg.withtrip.ui.mypage.trip.MyFeedFragment"
        android:label="MyFeedFragment" >
        <action
            android:id="@+id/action_myFeedFragment_to_tripDetailFragment2"
            app:destination="@id/tripDetailFragment2" />
    </fragment>

</navigation>